test/corpus/expressions
================================================================================
Function call
================================================================================

1;
f(1);
f(1) + f(1);

--------------------------------------------------------------------------------

(source_file
  (nl)
  (expr
    (constant
      (integer)))
  (nl)
  (expr
    (id)
    (expr_list
      (expr
        (constant
          (integer)))))
  (nl)
  (expr
    (expr
      (id)
      (expr_list
        (expr
          (constant
            (integer)))))
    (expr
      (id)
      (expr_list
        (expr
          (constant
            (integer))))))
  (nl))

================================================================================
IDs
================================================================================

a;
a01231;
a::b;
::a;
GLOBAL::a; # Legacy syntax.
Cluster::Supervisor::__init_cluster_nodes();
--------------------------------------------------------------------------------

(source_file
  (nl)
  (expr
    (id))
  (nl)
  (expr
    (id))
  (nl)
  (expr
    (id))
  (nl)
  (expr
    (id))
  (nl)
  (expr
    (id))
  (minor_comment
    (comment_body))
  (nl)
  (expr
    (id)))

================================================================================
Attributes
================================================================================

global ip: set[addr] = { 1.1.1.1, 1.1.1.2 } &ordered &redef;
---

(source_file
  (nl)
  (var_decl
    (id)
    (type
      (type))
    (initializer
      (init_class)
      (expr
        (expr_list
          (expr
            (constant
              (ipv4)))
          (expr
            (constant
              (ipv4))))))
    (attr_list
      (attr)
      (attr))))

================================================================================
Type constants
================================================================================

print string;
print vector of int;
print interval;
print table[int] of vector of table[string] of count;
---

(source_file
  (nl)
  (expr_list
    (expr
      (type)))
  (nl)
  (expr_list
    (expr
      (type
        (type))))
  (nl)
  (expr_list
    (expr
      (type)))
  (nl)
  (expr_list
    (expr
      (type
        (type)
        (type
          (type
            (type)
            (type)))))))

================================================================================
Operations
================================================================================

total_secs / 3600 / 24;
---

(source_file
  (nl)
  (expr
    (expr
      (expr
        (id))
      (expr
        (constant
          (integer))))
    (expr
      (constant
        (integer)))))

================================================================================
Record field
================================================================================

c$http$method || c$http$uri;
c$http?$method || c$http?$uri;
---

(source_file
  (nl)
  (expr
    (expr
      (field_access
        (expr
          (field_access
            (expr
              (id))
            (id)))
        (id)))
    (expr
      (field_access
        (expr
          (field_access
            (expr
              (id))
            (id)))
        (id))))
  (nl)
  (expr
    (expr
      (field_check
        (expr
          (field_access
            (expr
              (id))
            (id)))
        (id)))
    (expr
      (field_check
        (expr
          (field_access
            (expr
              (id))
            (id)))
        (id)))))
