test/corpus/types
================================================================================
Address
================================================================================

127.0.0.1;
[2620:83:8000:140::3];

--------------------------------------------------------------------------------

(source_file
  (nl)
  (expr
    (constant
      (ipv4)))
  (nl)
  (expr
    (constant
      (ipv6)))
  (nl))
